--- a/1-三大件.md
+++ b/1-三大件.md
@@ -3,10 +3,10 @@
 > ***XiaoCheng Programming Learning Book***
 >
 
-## ⭐️ HTML5新特性  
+## ⭐️ 一、HTML5新特性  
 
 1. 语义化标签  
-  <img src="images/image.png" width="350" height="300">  
+  <img src="images/image.png" width="250" height="200">  
 2. 浏览器支持  
 3. 多媒体标签  
     + **embed**(视频、音频 不支持移动端)  
@@ -24,9 +24,9 @@
 10. 地理定位  ***getCurrentPosition()*** 
 11. 拖放  
 
-## ⭐️ CSS
+## ⭐️ 二、CSS
 
-### 选择器
+### 1. 选择器
 
 + 元素(p)、类(class)、id(#)、通配(*)、属性 **(input[type="text"** 分组 (",") 选择器
 + 后代组合器 ===> ***div p***  (选得到孙代、曾孙等)
@@ -42,7 +42,7 @@
    >
 + 伪元素(选择一个元素的某个部分而不是元素自己) ===>***p::first-line***
   
-### 文档流
+### 2. 文档流
 
 + 标准流 ===> 一行接一行,每一行从左至右
 + 浮动流 ***.float*** ===> 水平排版形式，左、右对齐
@@ -54,7 +54,7 @@
    > 粘性定位 sticky ==== 依赖用户的滚动，超出指定位置就固定
 + 脱离文档流 : ***float*** <===> ***position:absolute/fixed***
   
-### ⭐️ 内联元素 / 块状元素
+### ⭐️ 3. 内联元素 / 块状元素
 
 + inline元素————\<span> 默认水平排列 ⭐***不能用width指定***
 + block元素————\<div> 默认充满整个屏幕 可以通过display:inline;变成内联元素
@@ -62,21 +62,21 @@
    > ***overflow:hidden*** 干脆就直接让超出的内容隐藏了  
    > ***overflow:auto*** 不超出时，正常显示，超出时，就出现滚动条
 
-### ⭐️ 盒子模型
+### ⭐️ 4. 盒子模型
 
-   <img src="images/image-1.png"  width="400" height="300">
+   <img src="images/image-1.png"  width="300" height="200">
 
-### ⭐️⭐️⭐️ 层叠规则
+### ⭐️⭐️⭐️ 5. 层叠规则
 
-### CSS3
+### 6. CSS3
 
-#### 响应式布局
+#### (1) 响应式布局
 
 页面的设计与开发根据用户行为以及设备环境(系统平台、屏幕尺寸、屏幕定向等)进行相应的响应和调整。
 
 + 媒体查询：`@media screen and (max-width: 600px)` 小屏幕上调整
 
-##### Flex 布局
+##### (2) Flex 布局
 
 子元素的float、clear和vertical-align属性将失效
 
@@ -106,7 +106,7 @@
    > `baseline`: 项目的第一行文字的基线对齐
    >
 
-<img src="images/image-3.png" width="400" height="200">
+<img src="images/image-3.png" width="200" height="100">
 
 1. 项目属性
    > `order` ========= 数值越小越靠前(0)  
@@ -116,7 +116,7 @@
    > `flex` ========== flex-grow, flex-shrink 和 flex-basis的简写，默  为(0 1 auto)快捷---> auto (1 1 auto) 和 none (0 0 auto)  
    > `align-self` ====== 允许单个项目有与其他项目不一样的对齐方式
 
-##### Grid 布局
+##### (3) Grid 布局
 
 1. 网格轨道  `grid-template-columns`与`grid-template-rows`
    > *A*  
@@ -133,13 +133,13 @@
          grid-column-end: 3;  
          }
    >
-<img src="images/image-4.png" width="400" height="250">
+<img src="images/image-4.png" width="200" height="125">
 
-##### 瀑布流
+##### (4) 瀑布流
 
    多行等宽元素排列,在手机端进行多图片展示,等宽不等高
 
-#### 动画
+#### 7. 动画
 
 ```CSS  
 # 创建动画（渐变色）
@@ -175,7 +175,7 @@ div
 }
 ```
 
-#### 过渡
+#### 8. 过渡
 
 元素从一种样式逐渐改变为另一种的效果
 
@@ -194,7 +194,7 @@ div:hover {
 transition: width 2s, height 2s, transform 2s;
 ```
 
-#### 渐变
+#### 9. 渐变
 
 在颜色之间平稳的过渡
 
@@ -222,7 +222,7 @@ background-image: linear-gradient(-90deg, red, yellow);
 
 <img src="images/image-5.png" alt="渐变色" width="200" height="150">
 
-#### 背景
+#### 10. 背景
 
 > background-image ====> 添加背景图片  
 > background-size =====> 背景图片大小 px与%  
@@ -230,7 +230,7 @@ background-image: linear-gradient(-90deg, red, yellow);
 > |||||||| content-box, padding-box,和 border-box区域内可以放置背景图像|||||  
 > background-clip =====> 剪裁属性:从指定位置开始绘制  
 
-#### 边框
+#### 11. 边框
 
 > border-radius 圆角  
 > box-shadow 阴影（10px 10px 5px #888888）  
@@ -238,7 +238,7 @@ background-image: linear-gradient(-90deg, red, yellow);
 > border-image 边界图片   
 <img src="images/image-7.png" alt="边界图片示例" width="100" height="100">
 
-#### 圆角
+#### 12. 圆角
 
 ```CSS
 # 纯色做圆角填充
@@ -269,7 +269,7 @@ border-radius: 15px 50px 30px 5px:  顺时针从左上开始编号1.2.3.4
 border-radius: 50px/15px
 ```
 
-#### 字体
+#### 13. 字体
 
 ```CSS
 <style> 
@@ -289,7 +289,7 @@ div
 </style>
 ```
 
-#### 2D / 3D 转换
+#### 14. 2D / 3D 转换
 
 2D转换
 >translate() 平移 ====> transform: translate(50px,100px);  
@@ -304,14 +304,14 @@ div
 
 ---
   
-## ⭐️JavaScript  
+## ⭐️三、JavaScript  
 
-### Dom中的innerHTML属性
+### 1. Dom中的innerHTML属性
 
    > \<div id="demo">    \</div>  中间的值  
    ***document.getElementById("demo").innerHTML***
 
-### ⭐️ 数据类型
+### ⭐️2. 数据类型
 
 + 未定义 Undefined
   + 未定义的变量var t1;
@@ -337,9 +337,9 @@ div
       > ***将"5" 转换成数字 5***
       > 若变量不可转换，则类型为Number,但值为NaN(非数字)
 
-### ⭐️ 函数function
+### ⭐️3. 函数function
 
-#### 调用方式
+#### (1) 调用方式
 
 + ⭐️ 全局调用
 
@@ -404,7 +404,7 @@ add();   //计数器结果为3
 // 一直保留数据
 ```
 
-### ✅ 对象
+### ✅4. 对象
 
   原型链和继承
   
@@ -432,13 +432,13 @@ add();   //计数器结果为3
    console.log(child.method()); // 5
    ```
 
-### ✅ 作用域（作用域链）
+### ✅5. 作用域（作用域链）
 
 作用域的集合就是作用域链 [scope]  
 1、函数在执行的过程中，先从自己内部寻找变量  
 2、找不到，再从创建当前函数所在的作用域去找，向上一级找。（就近原则）
 
-### ✅ BOM API
+### ✅6. BOM API
 
 BOM ---> 浏览器对象模型  
 浏览器窗口(Window)对象是BOM的顶层对象
@@ -527,11 +527,11 @@ userAgent   判断用户浏览器的类型(chrome、edge)
 platform    判断浏览器所在的系统平台类型.(ios、android)
 ```
 
-### ⭐️ DOM API
+### ⭐️7. DOM API
 
    通过Js操作HTML元素
 
-#### 要先找到HTML元素
+#### (1) 要先找到HTML元素
 
    ```js
    // 根据Id查
@@ -542,7 +542,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
    getElementsByClassName
    ```
 
-#### 改变HTML输出流
+#### (2) 改变HTML输出流
 
    ```js
       // 直接向 HTML 输出流写内容
@@ -558,7 +558,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
       onclick="document.getElementById('id1').style.color='red'">点我!<button>
    ```
 
-#### HTML DOM 事件
+#### (3) HTML DOM 事件
 
    ```js
    // 对事件作出反应，点击文本更换内容
@@ -587,7 +587,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
 + 冒泡: 有内外多层元素时,内部元素先触发,外部再触发(先内在外)
 + 捕获: 先外再内
 
-#### DOM元素
+#### (4) DOM元素
 
    ```js
    // 创建新的 HTML 元素 --- appendChild(添加元素到尾部) 
@@ -610,7 +610,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
    parent.replaceChild(para, child);
    ```
 
-#### Dom集合与NodeList对象
+#### (5) Dom集合与NodeList对象
 
    ```js
    // 多个p元素，可获得集合,使用 myCollection[1] 访问第二个元素
@@ -632,7 +632,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
 + 只有 NodeList 对象有包含属性节点和文本节点。  
 + ⭐ NodeList非数据,无法使用数组的方法： valueOf(), pop(), push(), 或 join()等
 
-### ⭐️ Ajax
+### ⭐️8. Ajax
 
 (异步的 JavaScript 和 XML)  
 一种创建快速动态网页的技术  
@@ -705,7 +705,7 @@ if (str.length==0)
 xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 ```
 
-### ✅ JavaScript 执行机制
+### ✅9. JavaScript 执行机制
 
 > Js乃单线程语言，但并非按照语句出现的顺序执行  
 “多线程”也是用单线程模拟出来的
@@ -715,7 +715,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 同步任务
 + 异步任务
 
-<img src="images/image-8.png" width="500px" height="400px"/>
+<img src="images/image-8.png" width="250px" height="200px"/>
 
 ```js
    let data = [];                            
@@ -741,7 +741,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 网络进程： 负责加载网络资源
 + **渲染进程**： 启动后开启一个渲染主线程，负责执行HTML、CSS、JS代码（每个标签页开一个渲染进程）
 
-<img src="images/渲染进程.png" width="500">
+<img src="images/渲染进程.png" width="300">
 
 1. 在最开始的时候，渲染主线程会进⼊⼀个⽆限循环
 2. 每⼀次循环会检查消息队列中是否有任务存在。如果有，就取出第⼀个任务
@@ -766,9 +766,9 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
    ⭐意思是任务在主线程中可最早在空闲时间执行
 ```
 
-### ✅ ES6+ 特性 ( ECMAScript 6 )
+### ✅10. ES6+ 特性 ( ECMAScript 6 )
 
-#### let 和 const
+#### (1) let 和 const
 
 三大命令: var | let | const  
 ***声明全局变量***  
@@ -778,7 +778,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 > let: 声明的是变量(必须声明后使用)  
 const: 声明一个只读的常量  
 
-#### 变量解构赋值
+#### (2) 变量解构赋值
 
 + 解构赋值 "..." 必须是最后一个参数
 
@@ -793,7 +793,7 @@ console.log(b);            b = 20
    console.log(rest);         // Array [30, 40, 50]
 ```
 
-#### 对象扩展和新增方法
+#### (3) 对象扩展和新增方法
 
 ```js
 // 扩展运算符  ...
@@ -813,7 +813,7 @@ Object.keys()，Object.values()，Object.entries()：
 Object.fromEntries()： 是Object.entries()的逆操作，用于将一个键值对数组转为对象。
 ```
 
-#### Set 和 Map 数据结构
+#### (4) Set 和 Map 数据结构
 
 Set : 集合 (无序、不重复、相关)
 
@@ -851,7 +851,7 @@ Map : 字典(映射) === Key-Value 键值对(不重复)
 + 遍历方法同上
 + TODO :  ===> WeakSet与WeakMap
 
-#### ⭐️❗ Promise & async / await 异步编程
+#### ⭐️❗(5)  Promise & async / await 异步编程
 
 防止出现"回调地狱"的情况 ===> Promise
 
@@ -883,7 +883,7 @@ const {A, B} = await Promise.all([promiseA,promiseB])
 fn();
 ```
 
-#### Generator 函数异步编程
+#### (6) Generator 函数异步编程
 
 ```js
 function * main () {             // 生成器函数 多一个 * 号
