--- a/4-算法.md
+++ b/4-算法.md
@@ -767,23 +767,182 @@
         }
     ```
 
-11. 杨辉三角
+11. 杨辉三角Ⅰ
 
-```Java
- public List<List<Integer>> generate(int numRows) {
-        List<List<Integer>> ret = new ArrayList<List<Integer>>();
-        for (int i = 0; i < numRows; ++i) {
-            List<Integer> row = new ArrayList<Integer>();
-            for (int j = 0; j <= i; ++j) {
-                if (j == 0 || j == i) {
-                    row.add(1);
-                } else {
-                    row.add(ret.get(i - 1).get(j - 1) + ret.get(i - 1).get(j));
+    ```Java
+    public List<List<Integer>> generate(int numRows) {
+            List<List<Integer>> ret = new ArrayList<List<Integer>>();
+            for (int i = 0; i < numRows; ++i) {
+                List<Integer> row = new ArrayList<Integer>();
+                for (int j = 0; j <= i; ++j) {
+                    if (j == 0 || j == i) {
+                        row.add(1);
+                    } else {
+                        row.add(ret.get(i - 1).get(j - 1) + ret.get(i - 1).get(j));
+                    }
                 }
+                ret.add(row);
             }
-            ret.add(row);
+            return ret;
         }
-        return ret;
+    ```
+
+12. 杨辉三角Ⅱ
+
+    ```Java
+    // 1. I的优化，只使用一个数组
+    public List<Integer> getRow(int rowIndex) {
+        List<Integer> row = new ArrayList<Integer>();
+        row.add(1);
+        for (int i = 1; i <= rowIndex; ++i) {
+            // 在每一行的末尾 加0，防止数组索引越界
+            row.add(0);
+            for (int j = i; j > 0; --j) {
+                // row.get(j)就是0，而 row.get(j - 1)是最后一个元素
+                row.set(j, row.get(j) + row.get(j - 1));
+            }
+        }
+        return row;
     }
 
+    // 2. 线性递推
+    public List<Integer> getRow(int rowIndex) {
+            List<Integer> row = new ArrayList<Integer>();
+            row.add(1);
+            for (int i = 1; i <= rowIndex; ++i) {
+                row.add((int) ((long) row.get(i - 1) * (rowIndex - i + 1) / i));
+            }
+            return row;
+        }
+    ```
+
+    <img src="images/杨辉三角.png" width="500">
+
+13. 反转字符串的单词Ⅱ
+    给定一个字符串 s ，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序
+
+    ```Java
+    public String reverseWords(String s) {
+        char[] chars = s.toCharArray();
+        int start = 0;
+        int end = 0;
+        while(end < chars.length){
+            // 记一个单词的长度为end
+            while(end < chars.length && chars[end] != ' ') end++;
+            reverseSubString(chars, start, end);
+            start = end + 1;
+            end = start;
+        }
+        return new String(chars);
+        
+    }
+    private void reverseSubString(char[] s, int start, intend){
+        // 从空格变成指向每个单词最后一个字符
+        end--;
+        while(start < end){
+            char temp = s[start];
+            s[start] = s[end];
+            s[end] = temp;
+            start++; end--;
+        }
+    }
+    ```
+
+14. 寻找旋转排序数组中的最小值  
+    已知一个长度为 n 的数组，预先按照升序排列，经由 1 到 n 次 旋转 后，得到输入数组。例如，原数组 nums = [0,1,2,4,5,6,7] 在变化后可能得到：
+
+    - 若旋转 4 次，则可以得到 [4,5,6,7,0,1,2]
+    - 若旋转 7 次，则可以得到 [0,1,2,4,5,6,7]  
+    注意，数组 [a[0], a[1], a[2], ..., a[n-1]] 旋转一次 的结果为数组 [a[n-1], a[0], a[1], a[2], ..., a[n-2]] 。  
+
+    给一个元素值 互不相同 的数组 nums ，它原来是一个升序排列的数组，并按上述情形进行了多次旋转。请你找出并返回数组中的 最小元素 。  
+
+    设计一个时间复杂度为 O(log n) 的算法解决此问题。
+
+    ```Java
+    public int findMin(int[] nums) {
+        int low = 0;
+        int high = nums.length - 1;
+        // 无需排序，直接二分法查找，因为仍是相对有序的，最小值后面的都大，前面的也是升序
+        // [7,8,9,1,2,3,4,5,6]中间值是2,若mid大于r,则最小值在右边，否则在左边
+        while (low < high) {
+            int pivot = low + (high - low) / 2;
+            if (nums[pivot] < nums[high]) {
+                high = pivot;
+            } else {
+                low = pivot + 1;
+            }
+        }
+        return nums[low];
+    }
+    ```
+
+15. 删除数组中的重复项
+
+    ```Java
+    public int removeDuplicates(int[] nums) {
+        int n = nums.length;
+        if (n == 0) {return 0;}
+        // 第一个数肯定不会重复，从1开始
+        int l = 1; int r = 1;
+        while (r < n) {
+            // 当右指针与前一个数不一样，说明碰到新数了，存到左指针l处，l才+1
+            if (nums[r-1] != nums[r]) {
+                nums[l] = nums[r];
+                ++l;
+            }
+            ++r;
+        }
+        
+        return l;
+    }
+    ```
+
+16. 移动0
+
+```Java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        int n = nums.length;
+        int l = 0; int r = 0;
+        while (r<n){
+            // [0,1,0,3,12]找到非0值与左指针l交换，交换了l才+1，保证l指向的一直跟随着0
+            if (nums[r] != 0) {
+                swap(nums,l,r);    // [1,0,0,3,12]
+                l++;
+            }
+            r++;
+        }
+    }
+    public void swap(int[] nums,int l,int r) {
+        int temp = 0;
+        temp = nums[l];
+        nums[l] = nums[r];
+        nums[r] = temp;
+    }
+}
 ```
+
+#### 三、简单题
+
+1. 回文数（不用数字变字符串）
+
+   ```Java
+    public boolean isPalindrome(int x) {
+        // 先排除负数和0，以及最后一位为0的
+        if (x < 0 || (x % 10 == 0 && x != 0)) return false;
+        // 分析正数
+        int r = 0;
+        // 当x <= r时，已经处理到一半了
+        while (x > r) {
+            // 给反转数 每次乘以10并加上x对10的余数
+            r = r * 10 + x % 10;
+            // x要每次除以10取整
+            x /= 10;
+        }
+        // 若为奇数位，通过r/10 去除中间位的数字
+        return x == r || x == r / 10;
+    }
+   ```
+
+2. 
