--- a/5-数据结构.md
+++ b/5-数据结构.md
@@ -3,7 +3,7 @@
 > ***XiaoCheng Programming Learning Book***
 >
 
-## 线性结构（线性表）
+## 一、线性结构（线性表）
 
 💬 描述： 除第一个元素外，每个元素有且仅有一个直接前驱。除最后一个元素外，每个元素有且只有一个直接后继。
 
@@ -91,7 +91,7 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 
 ### 3. 链表
 
-#### 单向链表
+#### (1) 单向链表
 
 一组任意的存储单元，可连续可不连续  
 **结点**：包括 数据域 / 指针域  
@@ -106,14 +106,14 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
     - **存取元素效率**：顺序表是 随机存取 效率高，链表是顺序存取，取值一般用顺序表（R）
     - **插入和删除元素效率**：频繁插入或删除适宜用链表（I、D）
 
-#### 双向链表
+#### (2) 双向链表
 
 既可以从头又可以从末尾开始遍历  
 ![alt text](images/双向链表.png)  
 左指针 指向上一个结点的 数据  
 右指针 指向下一个结点的 数据
 
-#### 循环链表
+#### (3) 循环链表
 
 ![alt text](images/循环链表.png)  
 尾结点的指针指向了 **头结点**(没有数据的)  
@@ -134,18 +134,17 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 
 ### 4. 栈（后进先出）
 
-#### 顺序栈
+#### (1) 顺序栈
 
 只允许在一段插入或删除的线性表  
 <img src="images/栈.png" width="250">  
 
-#### 链栈
+#### (2) 链栈
 
 ![链栈](images/链栈.png)  
 栈空：头指针指向Null  
 
-
-#### 共享栈（两栈共享空间）
+#### (3) 共享栈（两栈共享空间）
 
 ![共享栈](images/共享栈.png)  
 栈空：两栈都向两边收缩，左栈top=-1，右栈top=MaxSize  
@@ -153,14 +152,14 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 
 ### 5. 队列
 
-#### 顺序队列（先进先出FIFO）
+#### (1) 顺序队列（先进先出FIFO）
 
 需要队头指针（front）和队尾指针（rear）  
 假溢出：  
 再在E的上方插入元素F，会超过队列最大长度，但并未全部占慢  
 ![假溢出](images/假溢出.png)  
 
-#### 循环队列（解决假溢出）
+#### (2) 循环队列（解决假溢出）
 
 头尾相接：  
 <img src="images/循环队列.png" width="400">  
@@ -170,11 +169,11 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 - 队满（Q.rear+1）%MAXSIZE==Q.front； front在rear的下一位置
 - 队空 Q.rear==Q.front；在同一位置
 
-#### 双端队列
+#### (3) 双端队列
 
 两端都进行入队和出队
 
-#### 链队列
+#### (4) 链队列
 
 将队头指针指向链队列的头结点，而队尾指针指向终端结点  
 ![alt text](images/链队列.png)  
@@ -183,7 +182,7 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 
 ---
 
-## 散列结构
+## 二、散列结构
 
 💬 描述：一种为保证增删效率和查询效效率的数据结构（数组+链表）  
 
@@ -202,14 +201,16 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 Hash表的删除：  
 &emsp;&emsp;链地址法可直接删除元素，开发地址法不行，应该删除后放入一个不存在的数据（-1）
 
-## 集合与映射
+---
 
-### 集合
+## 三、集合与映射
+
+### 1. 集合
 
 💬 描述：具有某种特性的事物的整体，一种不允许值重复的顺序数据结构  
 特性： 无序性、互异性、确定性
 
-### 映射
+### 2. 映射
 
 💬 描述：集合与集合之间的一种对应关系，用来存储键值对  
 **映射的实现通常使用哈希函数来快速定位键对应的值**
@@ -226,7 +227,7 @@ Hash表的删除：
 - 快速查找： 映射通过键快速查找对应的值，具有高效的查找速度。
 - 数据关联性： 映射可以用于存储具有关联关系的数据。
 
-### 位图 (BitMap)
+### 3. 位图 (BitMap)
 
 💬 描述：用每一位来存放某种状态，适用于大规模数据，但数据状态又不是很多的情况，用来判断某个数据存不存在。  
 
@@ -236,7 +237,7 @@ Hash表的删除：
 
 ---
 
-## 树
+## 四、树
 
 ### 1. 二叉树
 
@@ -268,7 +269,7 @@ Hash表的删除：
 - 从根节点到某一节点，路径上经过的字符连接起来，为该节点对应的字符串。
 - 每个节点的所有子节点包含的字符都不相同。
 
-![前缀树](images/前缀树.png)
+<img src="images/前缀树.png" width="400">
 
 ### 3. 堆(Heap)
 
@@ -284,32 +285,176 @@ Hash表的删除：
 
 ### 4. 线段树
 
-### 5. 霍夫曼树
+用于维护区间信息(必须满足结合律), 可以实现O(log n)的区间修改,还同时支持多种操作  
+
+线段树是一棵 **平衡二叉树** 。母结点代表整个区间的和，越往下区间越小,每个节点都对应一条线段[ 区间 ],但并非所有线段都是树的节点  
+对于一个数组 [1,2,3,4,5]  
+<img src="images/线段树.png" width="400">
+
+采用深度优先DFS构建线段树
+
+### 5. 哈夫曼树 (最优树)
+
+又称:带权路径长度最短的二叉树  
+给定N个权值作为N个叶子结点，构造一棵二叉树，该树的带权路径长度达到最小 (带权路径长度最短的树,权值较大的结点离根较近)
+
+<img src="images/哈夫曼树.png" width="400">
+
+- 哈夫曼编码  
+   一种压缩编码的编码算法,对频率高的字符使用较短的编码,频率低的字符使用较高的编码,实现数据压缩  
+   <img src="images/哈夫曼编码.png" width="200">
 
 ### 6. 红黑树
 
-### 7. 伸展树
+(1) 一种 **自平衡** 的二叉树,高效的查找树,可以在O(logN)的时间内完成查找/增加/删除等操作  
 
-### 8. Treap
+(2) 避免普通二叉树在极端情况变成链表,采用自平衡的查找树(AVL树/红黑树)  
+(3) 红黑树性质:  
+
+- 节点是红色或黑色。
+- 根是黑色。
+- 所有叶子都是黑色（叶子是NIL节点）。
+- 每个红色节点必须有两个黑色的子节点。（从每个叶子到根的所有路径上不能有两个连续的红色节点。）
+- 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点（简称黑高）
+
+还要考虑 某个节点到其每个叶子节点路径长度的问题,路径过长效率降低  
+所以,在路径最长的情况下,红色节点数 = 黑色节点数  
+该路径长度 = 2 * 黑色节点数(最短路径的两倍)
+
+(4) 颜色变化和旋转(可以保证树的大致平衡,最多3次旋转实现平衡)  
+
+- LL( / )型 =======> 先变色再右旋
+
+   <img src="images/红黑树LL.png" width="400">
+
+- LR( < )型 =======> 左旋变成LL型,变色+右旋
+
+   <img src="images/红黑树LR.png" width="500">
+
+- RR( \ )型 =======> 先变色再左旋
+- RL( > )型 =======> 右旋旋变成RR型,变色+左旋
+
+(5) 插入  
+&emsp;&emsp;新插入的节点应该是红色,若是黑色则该节点所在路径比其他路径多出一个黑色节点,比较麻烦 (插入的根节点除外)  
+
+1. N 的父节点是红色，叔叔节点 U 也是红色。由于 P 和 N 均为红色，需要调整。P 和 U 的颜色染成黑色，再将 G 的颜色染成红色,其上要变成红色节点,向上递归调整  
+
+   <img src="images/红黑树插入3.png" width="400">
+2. N 的父节点为红色，叔叔节点U为黑色,节点 N 是 P 的右孩子，且节点 P 是 G 的左孩子。对P左旋，调整N与P的位置，变成上一种情况  
+
+   ![alt text](images/红黑树插入4.png)
+3. 第2种还可以对G右旋，调整P与G的位置，互换颜色  
+   ![alt text](images/红黑树插入5.png)
+
+(6) 删除  
+&emsp;&emsp;要首先确定删除的节点有几个孩子节点，若有2个就不能直接删除，要先找到该节点先驱（左子树中最大的节点）或者后继（右子树中最小的节点），然后将前驱或者后继的值复制到要删除的节点中，最后再将前驱或后继删除。  
+&emsp;&emsp;当删除的红色时，拿子节点补空位即可；当为黑色时，那所有经过该节点路径黑高都-1，若该节点子节点时红色，拿子节点替换被删除的节点，并将子节点染成黑色。若子节点为黑色较复杂：  
+
+1. S 为红色，其他节点为黑色，此时可对N的父节点左旋，然后互换P与S颜色，黑高不满足，继续调整
+![alt text](images/红黑树删除2.png)
+2. N 的父节点，兄弟节点 S 和 S 的孩子节点均为黑色，此时可简单把S染成红色  
+![alt text](images/红黑树删除3.png)
+3. N 的父节点是红色，S 和 S 孩子为黑色,交换P与S颜色即可。
+4. S 为黑色，S 的左孩子为红色，右孩子为黑色。N 的父节点颜色可红可黑，且 N 是 P 左孩子。对 S 进行右旋操作，并互换 S 和 SL 的颜色。
+5. S 为黑色，S 的右孩子为红色。N 的父节点颜色可红可黑，且 N 是其父节点左孩子。对 P 进行左旋操作，并互换 P 和 S 的颜色，并将 SR 变为黑色  
+<img src="images/红黑树删除456.png" width="400">
+
+### 7. 伸展树（基于程序局部性原理）
+
+在每次一个节点被访问后，就把它推到树根的位置（特殊的旋转）  
+**伸展**：  
+如果查询节点的父节点不是根节点，那么该节点一定有祖父节点  
+
+- 之字形
+   总是先旋转查询节点，先左再右  
+   <img src="images/之字形.png" width="500">
+- 一字型
+   先旋转其父节点到祖父节点，然后再旋转查询节点到父节点  
+   <img src="images/一字形.png" width="500">
+
+### 8. Treap（树堆 Tree+Heap）
+
+一个**随机附加域**满足堆的性质的二叉搜索树  
+在调整（插入、删除元素）后维护堆的性质只用左旋右旋
 
 ### 9. B+树
 
+1. **B树** (B-树、多路平衡查找树)  
+   m阶的B树满足：  
+
+   - 每个结点最多有m棵子树。
+   - 具有k个子树的非叶结点包含k -1个键。
+   - 每个非叶子结点（除了根）具有至少⌈ m/2⌉子树，即最少有⌈ m/2⌉-1个关键字。
+   - 如果根不是终端结点，则根结点至少有一个关键字，即至少有2棵子树。【根的关键字取值范围是[1，m-1]，子树的取值范围是[2,m]】
+   - 所有叶子结点都出现在同一水平，没有任何信息（高度一致）。
+   - 最小高度：h < logm(n+1)  
+      <img src="images/B树.png" width="500">
+
+2. B+树
+
+   MySQL的InnoDB引擎使用B+树来作为索引和数据的存储结构，优化在于：  
+   B+树的所有数据都存储在叶子节点，非叶子节点只存储索引  
+   叶子节点的数据使用双向链表的方式进行关联  
+
+   - 每个结点最多有m棵子树。
+   - 如果根不是终端结点，则根结点至少有一个关键字，即至少有2棵子树。【根的关键字取值范围是[1，m-1]】
+   - 每个关键字对应一棵子树（与B树的不同），具有k个子树的非叶结点包含k 个键。
+   - 每个非叶子结点（除了根）具有至少⌈ m/2⌉子树，即最少有⌈m/2⌉个关键字。
+   - 终端结点包含全部关键字及相应记录的指针，叶结点中将关键字按大小顺序排序，并且相邻叶结点按大小顺序相互链接起来。
+   - 所有分支结点（可以视为索引的索引）中金包含他的各个子节点（即下一级的索引块）中关键字最大值，及指向其子结点的指针。  
+   <img src="images/B+树.png" width="450">
+
+3. B树和B+树的区别
+
+   |-------|B树|B+树|
+   |:-----|:--------:|:--------:|
+   |关键字|(m/2)-1到m-1|m/2到m|
+   |子树|非叶根：2 - m;<br>其他：m/2 - m |非叶根：2 - m;<br>其他：m/2 - m|
+   |key-subtree|k个key有k+1棵树|k个key有k棵树|
+   |非终端节点|包含有用信息|只是索引|
+   |终端节点|不会出现非终端节点的key|会出现非终端节点的key|
+
 ### 10. 左偏树
+
+属于可并堆，支持快速合并，是优先队列的一种实现方式  
+**外界点**：左节点或右节点为空  
+一个n个节点的二叉树，根节点的dist外界点不超过log(n+1)  
+每个节点左儿子dist大于等于右儿子dist  
+每个节点的dist都等于其右儿子的dist + 1  
+
+**合并：**  
+依据堆的合并进行合并；若合并后左二子的dist小于右儿子的dist，则交换两棵子树  
+时间复杂度：O(logN + logM)  
+
+**删除**： 直接合并左右儿子
 
 ### 11. 树链剖分
 
+树链剖分是根据轻重儿子，将一棵树剖成多条链  
+
+**重儿子**：一个结点的所有子树中，结点数最多的子树的根节点
+得到 **重链**
+
+维护链：
+
+- dfs序：要维护的是重链，搜重儿子，将它转换到数列上来，不先搜重儿子，重链上的dfs序可能会断掉（深度优先）   
+<img src="images/树链剖分.png" width="300">
+
+时间戳：dfs第一次访问到达每个节点的时间，从1开始叠加  
+用处：把树变成连续的，某节点的子树上的节点一定大于这个节点的时间戳且连续
+
 ---
 
-## 图
+## 五、图
 
 ### 1. 最短路径
 
 - 迪杰斯特拉算法(贪心算法)
 
 使用 **广度优先搜索** 解决赋权有向图或者无向图的单源最短路径问题  
-![alt text](images/迪杰斯特拉1.png)  
-![alt text](images/迪杰斯特拉2.png)  
-![alt text](images/迪杰斯特拉3.png)
+<img src="images/迪杰斯特拉1.png" width="400">
+<img src="images/迪杰斯特拉2.png" width="400">
+<img src="images/迪杰斯特拉3.png" width="400">
 
 - 弗洛伊德算法（Floyd）
 
@@ -320,12 +465,13 @@ Hash表的删除：
 1. 矩阵D记录顶点间的最小路径  
 例如D[0][3] = 10，说明顶点 0 到 3 的最短路径为10；
 
-2. 矩阵S记录顶点间最小路径中的中转点
+1. 矩阵S记录顶点间最小路径中的中转点
 例如S[0][3] = 1 说明 0 到 3的最短路径轨迹为：0 -> 1 -> 3。
 ```
 
-![alt text](images/佛洛依德1.png)  
-![alt text](images/佛洛依德2.png)  
+
+<img src="images/佛洛依德1.png" width="400">
+<img src="images/佛洛依德2.png" width="400">
 
 ### 2. 并查集
 
@@ -335,7 +481,7 @@ Hash表的删除：
 - 查询（Find）：查询两个元素是否在同一个集合中。
 
 类比成帮派，代表元素位帮主,有事找帮主(根节点)  
-<img src="images/并查集.png" width="250">  
+<img src="images/并查集.png" width="150">  
 
 **路径压缩**： 变成一个链效率较低，使 **每个结点的父节点都设成根节点**  
 **按秩合并**： 让秩小的树依附到秩大的树上  
@@ -363,15 +509,52 @@ Prim普利姆算法：  （贪心算法）
 
 常用方法：  
 选一个没有前驱(入度为0)的顶点输出并删掉其和其边，重复  
-![alt text](images/拓扑排序.png)
+<img src="images/拓扑排序.png" width="400">
 
-### 5. 最近公共祖先
+### 5. 最近公共祖先（LCA）
+
+- 基础法：进行一趟dfs，求出每个点的深度，先让两节点深度相等，再一起向上爬，直到两点相遇，此点为LCA
+- 倍增算法：往上爬变成了“跳”，例如a与b相差22，变成16、4、2个单位即可
 
 ### 6. 强连通分量
 
+有向图G中，如果两个顶点u，ｖ间有一条从ｕ到ｖ的有向路径，同时还有一条从ｖ到ｕ的有向路径，则称 **两个顶点强连通**。如果有向图G的每两个顶点都强连通，称G是一个 **强连通图**。有向非强连通图的极大强连通子图，称为 **强连通分量**。  
+
+DFS生成树  
+![alt text](images/DFS生成树.png)  
+4种边：
+
+1. 树边： 每次搜索找到一个还没有访问过的结点的时候就形成了一条树边  
+2. 返祖边：（7--->1）指向祖先节点的边
+3. 横叉边：（9--->7）搜索时遇到一个已经访问过的结点，并非是当前节点的祖先
+4. 前向边：（3--->6）搜索时遇到子树中的结点
+
+Tarjan 算法求强连通分量：  
+
+- 时间戳（dfs[]）: 每个点第一次被访问的时间的顺序
+- 追溯值（low[]）: 点x的追溯值为其子树满足以下条件的最小时间戳
+  - 该点已经访问过[ 有dfn值 ]
+  - 存在一条从x出发的边以它为终点
+
+<img src="images/Tarjan算法.png" width="400">  
+① 从1遍历到5时，如果选择先走5 -> 2，那么点2、3、4、5的low值都会追溯到2的时间戳  
+② 点5继续遍历，会到点1并发现1也走过了并且dfn[ 1 ]的时间戳更早  
+③ 最后这个图被分为了三个强连通分量（12345、7、689）
+
 ### 7. 双连通分量
 
-### 8. 二分图
+无向图中2种双连通分量：  
+1.边联通分量，e-DCC  
+2.点联通分量，v-DCC  
+
+概念：  
+
+- 桥：删除此无向边后，图变的不连通
+- 边双连通分量：极大的不含有桥的连通区域，说明无论删除e-DCC中的哪条边，e-DCC依旧连通
+- 割点：删除该点（与该点相关的边）后，图变得不连通
+- 点双连通分量：极大的不含有割点的连通区域
+
+### 8. 二分图（偶图）
 
 ### 9. 2-sat
 
@@ -397,9 +580,9 @@ Prim普利姆算法：  （贪心算法）
 
 ---
 
-## 算法
+## 六、算法
 
-### 排序
+### 1. 排序
 
 - ①冒泡排序  
    比较相邻的元素，交换，重复多轮  
@@ -439,16 +622,18 @@ Prim普利姆算法：  （贪心算法）
 
 ---
 
-### 贪心
+### 2. 贪心
 
 选取局部最优解
 
-### 分治
+### 3. 分治
 
 分治思想，分而治之  
 用于二分搜索、合并排序、快速排序、汉诺塔
 
-### 动态规划
+### 4. 动态规划
+
+### 5. 递归
 
 拆分子问题，记住过往，减少重复计算。  
 1+1+1+1=4  左边加一个1+ 变成5  
@@ -480,69 +665,54 @@ if (tempMap.containsKey(n)) {
 }
 ```
 
-### 递归
-
-### 回溯
+### 6. 回溯
 
 从一条路往前走，能进则进，不能进则退回来，换一条路再试，从而搜索到抵达特定终点的一条或者多条特定路径。
 
-### 枚举
+### 7. 枚举
 
-### 线性DP
+### 8. DP
 
-### 树形DP
+#### (1) 线性DP
 
-### 区间DP
+#### (2) 树形DP
 
-### 数位DP
+#### (3) 区间DP
 
-### 状压DP
+#### (4) 数位DP
 
-### 记忆化搜索
+#### (5) 状压DP
 
-### 背包问题
+### 9. 记忆化搜索
 
-### 
+### 10. 背包问题
 
+### 11. 查找
 
----
-
-### 查找
-
-#### 顺序查找
+#### (1) 顺序查找
 
 从数组的头部开始顺序查找，如果找到目标元素，就返回目标元素的位置，如果没有找到，返回 -1.
 
-##### 二分查找
+##### (2) 二分查找
 
 该数组元素 **有序**,每次分两半，左小右大，如果在数组内找到元素，返回元素的位置，否则返回 -1
 
-#### 分块(索引顺序)查找
+#### (3) 分块(索引顺序)查找
 
 额外建立一个“索引表”，将查找表分为若干子表（或称块），对每个子表建立一个索引项，其中包含两项内容：关键字项（其值为该子表内的最大）和指针项（指示该子表的第一个记录在表中的位置）。每个索引项构成一个索引表，索引表按关键字有序排列。  
 ![alt text](images/分块查找.png)
- 
-#### 树结构查找
+
+#### (4) 树结构查找
 
 二叉树查找，左子树小，右子树大
 
-#### 散列表查找
+#### (5) 散列表查找
 
 使用哈希函数，和开放地址法等查找
 
----
+### 12. 字符串匹配
 
-### 搜索
-
-#### 深度优先搜索 DFS
-
-#### 广度优先搜索 BFS
-
--
-
-### 字符串匹配
-
-#### KMP
+#### (1) KMP
 
 核心是利用匹配失败后的信息，尽量减少模式串与主串的匹配次数以达到快速匹配的目的  
 时间复杂度是 O(m+n)  
@@ -553,6 +723,6 @@ if (tempMap.containsKey(n)) {
 
 发现两个字符不匹配，立即移动到 next数组下表的位置
 
-#### 算法-前缀树（Trie树）
+#### (2) 算法-前缀树（Trie树）
 
 根节点不包含字符，将根节点到某一结点路径上经过的字符连接起来就是对应的字符串
