--- a/6-面试.md
+++ b/6-面试.md
@@ -5,7 +5,7 @@
 
 ## 面试题目
 
-### Java
+### 一、Java
 
 1. HashMap的实现原理
 2. A给B转账的同时B给A转账，怎么并发量最高
@@ -39,7 +39,7 @@
 
 ---
 
-### 数据库
+### 二、数据库
 
 #### 1. 普通
 
@@ -140,7 +140,7 @@
 
 ---
 
-### 前端
+### 三、前端
 
 #### 1. DNS解析和优化
 
@@ -297,7 +297,7 @@ CORS将请求分为两类: 简单请求 =|= 预检请求
 
 ---
 
-### 大数据
+### 四、大数据
 
 #### 1. Hadoop
 
@@ -393,10 +393,9 @@ CORS将请求分为两类: 简单请求 =|= 预检请求
 13. Flink的CEP机制
 14. Flink CEP编程中当状态没有到的时候将数据保存在哪里
 
-
 ---
 
-### 其他
+### 五、其他
 
 #### 1. CAP原则
 
