--- a/docs/1-三大件.md
+++ b/docs/1-三大件.md
@@ -1,12 +1,14 @@
 # 小橙编程学习宝典  
->
+
+> [!tip]
 > ***XiaoCheng Programming Learning Book***
 >
 
-## ⭐️ 一、HTML5新特性  
+## 一、HTML5新特性  
 
 1. 语义化标签  
-  <img src="images/image.png" width="250" height="200">  
+   \<header>  </br>
+   <img src="images/image.png" width="300">  
 2. 浏览器支持  
 3. 多媒体标签  
     + **embed**(视频、音频 不支持移动端)  
@@ -24,7 +26,7 @@
 10. 地理定位  ***getCurrentPosition()*** 
 11. 拖放  
 
-## ⭐️ 二、CSS
+## 二、CSS
 
 ### 1. 选择器
 
@@ -54,7 +56,7 @@
    > 粘性定位 sticky ==== 依赖用户的滚动，超出指定位置就固定
 + 脱离文档流 : ***float*** <===> ***position:absolute/fixed***
   
-### ⭐️ 3. 内联元素 / 块状元素
+### 3. 内联元素 / 块状元素
 
 + inline元素————\<span> 默认水平排列 ⭐***不能用width指定***
 + block元素————\<div> 默认充满整个屏幕 可以通过display:inline;变成内联元素
@@ -62,11 +64,11 @@
    > ***overflow:hidden*** 干脆就直接让超出的内容隐藏了  
    > ***overflow:auto*** 不超出时，正常显示，超出时，就出现滚动条
 
-### ⭐️ 4. 盒子模型
+### 4. 盒子模型
 
    <img src="images/image-1.png"  width="300" height="200">
 
-### ⭐️⭐️⭐️ 5. 层叠规则
+### 5. 层叠规则
 
 ### 6. CSS3
 
@@ -106,7 +108,7 @@
    > `baseline`: 项目的第一行文字的基线对齐
    >
 
-   <img src="images/image-3.png" width="200" height="100">
+   <img src="images/image-3.png" width="400" height="200">
 
 6. 项目属性
    > `order` ========= 数值越小越靠前(0)  
@@ -133,7 +135,7 @@
          grid-column-end: 3;  
          }
    >
-<img src="images/image-4.png" width="200" height="125">
+<img src="images/image-4.png" width="400" height="250">
 
 ##### (4) 瀑布流
 
@@ -236,7 +238,7 @@ background-image: linear-gradient(-90deg, red, yellow);
 > box-shadow 阴影（10px 10px 5px #888888）  
 <img src="images/image-6.png" alt="圆角和阴影示例" width="200" height="200">  
 > border-image 边界图片   
-<img src="images/image-7.png" alt="边界图片示例" width="100" height="100">
+<img src="images/image-7.png" alt="边界图片示例" width="200" height="200">
 
 #### 12. 圆角
 
@@ -304,14 +306,14 @@ div
 
 ---
   
-## ⭐️三、JavaScript  
+## 三、JavaScript  
 
-### 1. Dom中的innerHTML属性
+### 1. innerHTML属性
 
    > \<div id="demo">    \</div>  中间的值  
    ***document.getElementById("demo").innerHTML***
 
-### ⭐️2. 数据类型
+### 2. 数据类型
 
 + 未定义 Undefined
   + 未定义的变量var t1;
@@ -337,77 +339,75 @@ div
       > ***将"5" 转换成数字 5***
       > 若变量不可转换，则类型为Number,但值为NaN(非数字)
 
-### ⭐️3. 函数function
+### 3. 函数function
 
-#### (1) 调用方式
+  - 全局调用
 
-+ ⭐️ 全局调用
-
-```js
-function myFunction() {
-    return this;
-}
-myFunction();      // 返回 window 对象
-```
+  ```js
+  function myFunction() {
+      return this;
+  }
+  myFunction();      // 返回 window 对象
+  ```
 
 + 函数作为方法调用
-  
-```js
-var myObject = {
-    firstName:"John",
-    lastName: "Doe",
-    fullName: function () {return this;}}
-myObject.fullName();          // 返回 [object Object] (所有者对象)
-```
+
+  ```js
+  var myObject = {
+      firstName:"John",
+      lastName: "Doe",
+      fullName: function () {return this;}}
+  myObject.fullName();          // 返回 [object Object] (所有者对象)
+  ```
 
 + 构造函数调用  
 
-```Js
-// 构造函数:
-function myFunction(arg1, arg2) {
-    this.firstName = arg1;
-    this.lastName  = arg2;}
-var x = new myFunction("John","Doe");
-x.firstName;                             // 返回 "John"
-```
+  ```Js
+  // 构造函数:
+  function myFunction(arg1, arg2) {
+      this.firstName = arg1;
+      this.lastName  = arg2;}
+  var x = new myFunction("John","Doe");
+  x.firstName;                             // 返回 "John"
+  ```
 
 + ⭐️ 函数方法调用
-   > apply 和 call 用于调用函数,第一个参数必须是对象本身
-   >
-   ***区别*** ：apply传入一个数组，call作为参数传入
+     > apply 和 call 用于调用函数,第一个参数必须是对象本身
+     >
+     ***区别*** ：apply传入一个数组，call作为参数传入
 
-```js
-# call
-      function myFunction(a, b) {return a * b;}
-      myObject = myFunction.call(myObject, 10, 2);     // 返回 20
-# apply
-      myArray = [10, 2];
-      myObject = myFunction.apply(myObject, myArray);  // 返回 20
-```
+  ```js
+  # call
+        function myFunction(a, b) {return a * b;}
+        myObject = myFunction.call(myObject, 10, 2);     // 返回 20
+  # apply
+        myArray = [10, 2];
+        myObject = myFunction.apply(myObject, myArray);  // 返回 20
+  ```
 
 + ❗ 闭包
-  
-```Js
-var add = (function () {
-    var counter = 0;
-    return function () {return counter += 1;}
-})();
- 
-add();
-add();
-add();   //计数器结果为3
 
-// 分析：
-// 立即执行函数(function(){  })(), 由于return的是另一个function(),
-// 所以在执行一次后,就变成 var add = (function(){return counter += 1})
-// 而counter=0就执行一次,且每次都会访问局部变量counter，counter也不会重置，
-// 一直保留数据
-```
+  ```Js
+  var add = (function () {
+      var counter = 0;
+      return function () {return counter += 1;}
+  })();
+   
+  add();
+  add();
+  add();   //计数器结果为3
 
-### ✅4. 对象
+  // 分析：  
+  // 立即执行函数(function(){  })(), 由于return的是另一个function(),  
+  // 所以在执行一次后,就变成 var add = (function(){return counter += 1})  
+  // 而counter=0就执行一次,且每次都会访问局部变量counter，counter也不会重置，  
+  // 一直保留数据  
+  ```
 
-  原型链和继承
-  
+### 4. 对象
+
+原型链和继承
+
 + 每个对象（object）都有一个私有属性指向另一个名为原型（prototype）的对象。原型对象也有一个自己的原型，层层向上直到一个对象的原型为 null。
 
    ```js
@@ -418,7 +418,6 @@ add();   //计数器结果为3
    },};
    // this指向了 parent
    console.log(parent.method()); // 3
-
 
    // child继承parent
    const child = {
@@ -432,16 +431,17 @@ add();   //计数器结果为3
    console.log(child.method()); // 5
    ```
 
-### ✅5. 作用域（作用域链）
+### 5. 作用域（作用域链）
 
 作用域的集合就是作用域链 [scope]  
-1、函数在执行的过程中，先从自己内部寻找变量  
-2、找不到，再从创建当前函数所在的作用域去找，向上一级找。（就近原则）
 
-### ✅6. BOM API
+1. 函数在执行的过程中，先从自己内部寻找变量  
+2. 找不到，再从创建当前函数所在的作用域去找，向上一级找。（就近原则）
+
+### 6. BOM API
 
 BOM ---> 浏览器对象模型  
-浏览器窗口(Window)对象是BOM的顶层对象
+浏览器窗口(Window)对象是BOM的顶层对象  
 ***window的6个子对象窗口处理***
 
 + document 对象窗口中加载的文档处理（该对象很少用）
@@ -527,7 +527,7 @@ userAgent   判断用户浏览器的类型(chrome、edge)
 platform    判断浏览器所在的系统平台类型.(ios、android)
 ```
 
-### ⭐️7. DOM API
+### 7. DOM API
 
    通过Js操作HTML元素
 
@@ -578,8 +578,8 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
    事件：  
       > onload 和 onunload =======> 用户进入或离开页面，用来处理cookies  
       > onchange =============> 验证输入字段的改变  
-      > onmousedown、onmouseup == 鼠标移到元素上方或移出时触发
-      > onmouseover 和 onmouseout =>鼠标按下或释放时触发
+      > onmousedown、onmouseup == 鼠标按下或释放时触发
+      > onmouseover 和 onmouseout =>鼠标移到元素上方或移出时触发
       >
 
 事件传递的两种方式:（事件流）
@@ -632,7 +632,7 @@ platform    判断浏览器所在的系统平台类型.(ios、android)
 + 只有 NodeList 对象有包含属性节点和文本节点。  
 + ⭐ NodeList非数据,无法使用数组的方法： valueOf(), pop(), push(), 或 join()等
 
-### ⭐️8. Ajax
+### 8. Ajax
 
 (异步的 JavaScript 和 XML)  
 一种创建快速动态网页的技术  
@@ -705,7 +705,7 @@ if (str.length==0)
 xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 ```
 
-### ✅9. JavaScript 执行机制
+### 9. JavaScript 执行机制
 
 > Js乃单线程语言，但并非按照语句出现的顺序执行  
 “多线程”也是用单线程模拟出来的
@@ -715,7 +715,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 同步任务
 + 异步任务
 
-<img src="images/image-8.png" width="250px" height="200px"/>
+<img src="images/image-8.png" width="450px" height="400px"/>
 
 ```js
    let data = [];                            
@@ -741,7 +741,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 网络进程： 负责加载网络资源
 + **渲染进程**： 启动后开启一个渲染主线程，负责执行HTML、CSS、JS代码（每个标签页开一个渲染进程）
 
-<img src="images/渲染进程.png" width="300">
+<img src="images/渲染进程.png" width="480">
 
 1. 在最开始的时候，渲染主线程会进⼊⼀个⽆限循环
 2. 每⼀次循环会检查消息队列中是否有任务存在。如果有，就取出第⼀个任务
@@ -766,7 +766,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
    ⭐意思是任务在主线程中可最早在空闲时间执行
 ```
 
-### ✅10. ES6+ 特性 ( ECMAScript 6 )
+### 10. ES6+ 特性
 
 #### (1) let 和 const
 
@@ -851,7 +851,7 @@ Map : 字典(映射) === Key-Value 键值对(不重复)
 + 遍历方法同上
 + TODO :  ===> WeakSet与WeakMap
 
-#### ⭐️❗(5)  Promise & async / await 异步编程
+#### ❗(5)  Promise & async / await 异步编程
 
 防止出现"回调地狱"的情况 ===> Promise
 
