--- a/docs/5-数据结构.md
+++ b/docs/5-数据结构.md
@@ -1,5 +1,5 @@
 # 小橙编程学习宝典  
->
+> [!tip]
 > ***XiaoCheng Programming Learning Book***
 >
 
@@ -304,7 +304,9 @@ Hash表的删除：
    一种压缩编码的编码算法,对频率高的字符使用较短的编码,频率低的字符使用较高的编码,实现数据压缩  
    <img src="images/哈夫曼编码.png" width="200">
 
-### 6. 红黑树
+### 扩展
+
+#### 1. 红黑树
 
 (1) 一种 **自平衡** 的二叉树,高效的查找树,可以在O(logN)的时间内完成查找/增加/删除等操作  
 
@@ -359,7 +361,7 @@ Hash表的删除：
 5. S 为黑色，S 的右孩子为红色。N 的父节点颜色可红可黑，且 N 是其父节点左孩子。对 P 进行左旋操作，并互换 P 和 S 的颜色，并将 SR 变为黑色  
 <img src="images/红黑树删除456.png" width="400">
 
-### 7. 伸展树（基于程序局部性原理）
+#### 2. 伸展树（基于程序局部性原理）
 
 在每次一个节点被访问后，就把它推到树根的位置（特殊的旋转）  
 **伸展**：  
@@ -372,12 +374,12 @@ Hash表的删除：
    先旋转其父节点到祖父节点，然后再旋转查询节点到父节点  
    <img src="images/一字形.png" width="500">
 
-### 8. Treap（树堆 Tree+Heap）
+#### 3. Treap（树堆 Tree+Heap）
 
 一个**随机附加域**满足堆的性质的二叉搜索树  
 在调整（插入、删除元素）后维护堆的性质只用左旋右旋
 
-### 9. B+树
+#### 4. B+树
 
 1. **B树** (B-树、多路平衡查找树)  
    m阶的B树满足：  
@@ -414,7 +416,7 @@ Hash表的删除：
    |非终端节点|包含有用信息|只是索引|
    |终端节点|不会出现非终端节点的key|会出现非终端节点的key|
 
-### 10. 左偏树
+#### 5. 左偏树
 
 属于可并堆，支持快速合并，是优先队列的一种实现方式  
 **外界点**：左节点或右节点为空  
@@ -428,7 +430,7 @@ Hash表的删除：
 
 **删除**： 直接合并左右儿子
 
-### 11. 树链剖分
+#### 6. 树链剖分
 
 树链剖分是根据轻重儿子，将一棵树剖成多条链  
 
@@ -511,12 +513,14 @@ Prim普利姆算法：  （贪心算法）
 选一个没有前驱(入度为0)的顶点输出并删掉其和其边，重复  
 <img src="images/拓扑排序.png" width="400">
 
-### 5. 最近公共祖先（LCA）
+### 扩展
+
+#### 1. 最近公共祖先（LCA）
 
 - 基础法：进行一趟dfs，求出每个点的深度，先让两节点深度相等，再一起向上爬，直到两点相遇，此点为LCA
 - 倍增算法：往上爬变成了“跳”，例如a与b相差22，变成16、4、2个单位即可
 
-### 6. 强连通分量
+#### 2. 强连通分量
 
 有向图G中，如果两个顶点u，ｖ间有一条从ｕ到ｖ的有向路径，同时还有一条从ｖ到ｕ的有向路径，则称 **两个顶点强连通**。如果有向图G的每两个顶点都强连通，称G是一个 **强连通图**。有向非强连通图的极大强连通子图，称为 **强连通分量**。  
 
@@ -541,7 +545,7 @@ Tarjan 算法求强连通分量：
 ② 点5继续遍历，会到点1并发现1也走过了并且dfn[ 1 ]的时间戳更早  
 ③ 最后这个图被分为了三个强连通分量（12345、7、689）
 
-### 7. 双连通分量
+#### 3. 双连通分量
 
 无向图中2种双连通分量：  
 1.边联通分量，e-DCC  
@@ -554,29 +558,42 @@ Tarjan 算法求强连通分量：
 - 割点：删除该点（与该点相关的边）后，图变得不连通
 - 点双连通分量：极大的不含有割点的连通区域
 
-### 8. 二分图（偶图）
+#### 4. 二分图（偶图）
 
-### 9. 2-sat
+设G=(V,E)是一个无向图，如果顶点V可分割为两个互不相交的子集(A,B)，并且图中的每条边（i，j）所关联的两个顶点i和j分别属于这两个不同的顶点集(i in A,j in B)  
+<img src="images/二分图.png" width="500">  
 
-### 10. 欧拉回路
+- 匹配：G的一个子图M中，M的边集{E}中的任意两条边都不依附于同一个顶点  
+- 极大匹配：在当前已完成的匹配下,无法再通过增加未完成匹配的边的方式来增加匹配的边数  
+- 最大匹配：所有极大匹配当中边数最大的一个匹配  
+- 完全匹配：一个匹配中，图中的每个顶点都和图中某条边相关联  
 
-### 11. 哈米尔顿回路
+求二分图匹配可以用最大流、匈牙利算法
 
-### 12. 迭代加深
+- 交替路：从一个未匹配的点出发，依次经过未匹配边、匹配边、未匹配边.  
+- 增广路：从一个未匹配的点出发，走交替路，到达了一个未匹配过的点  
 
-### 13. A*
+#### 5. 2-sat
 
-### 14. 稳定婚姻
+#### 6. 欧拉回路
 
-### 15. 双向广索
+#### 7. 哈米尔顿回路
 
-### 16. 差分约束
+#### 8. 迭代加深
 
-### 17. 跳跃表
+#### 9. A*
 
-### 18. 树状数组
+#### 10. 稳定婚姻
 
-### 19. 最大流
+#### 11. 双向广索
+
+#### 12. 差分约束
+
+#### 13. 跳跃表
+
+#### 14. 树状数组
+
+#### 15. 最大流
 
 ---
 
@@ -633,7 +650,9 @@ Tarjan 算法求强连通分量：
 
 ### 4. 动态规划
 
-### 5. 递归
+### 5. 扩展
+
+#### 1. 递归
 
 拆分子问题，记住过往，减少重复计算。  
 1+1+1+1=4  左边加一个1+ 变成5  
@@ -665,31 +684,31 @@ if (tempMap.containsKey(n)) {
 }
 ```
 
-### 6. 回溯
+#### 2. 回溯
 
 从一条路往前走，能进则进，不能进则退回来，换一条路再试，从而搜索到抵达特定终点的一条或者多条特定路径。
 
-### 7. 枚举
+#### 3. 枚举
 
-### 8. DP
+#### 4. DP
 
-#### (1) 线性DP
+##### (1) 线性DP
 
-#### (2) 树形DP
+##### (2) 树形DP
 
-#### (3) 区间DP
+##### (3) 区间DP
 
-#### (4) 数位DP
+##### (4) 数位DP
 
-#### (5) 状压DP
+##### (5) 状压DP
 
-### 9. 记忆化搜索
+#### 5. 记忆化搜索
 
-### 10. 背包问题
+#### 6. 背包问题
 
-### 11. 查找
+#### 7. 查找
 
-#### (1) 顺序查找
+##### (1) 顺序查找
 
 从数组的头部开始顺序查找，如果找到目标元素，就返回目标元素的位置，如果没有找到，返回 -1.
 
@@ -697,22 +716,22 @@ if (tempMap.containsKey(n)) {
 
 该数组元素 **有序**,每次分两半，左小右大，如果在数组内找到元素，返回元素的位置，否则返回 -1
 
-#### (3) 分块(索引顺序)查找
+##### (3) 分块(索引顺序)查找
 
 额外建立一个“索引表”，将查找表分为若干子表（或称块），对每个子表建立一个索引项，其中包含两项内容：关键字项（其值为该子表内的最大）和指针项（指示该子表的第一个记录在表中的位置）。每个索引项构成一个索引表，索引表按关键字有序排列。  
 ![alt text](images/分块查找.png)
 
-#### (4) 树结构查找
+##### (4) 树结构查找
 
 二叉树查找，左子树小，右子树大
 
-#### (5) 散列表查找
+##### (5) 散列表查找
 
 使用哈希函数，和开放地址法等查找
 
-### 12. 字符串匹配
+#### 8. 字符串匹配
 
-#### (1) KMP
+##### (1) KMP
 
 核心是利用匹配失败后的信息，尽量减少模式串与主串的匹配次数以达到快速匹配的目的  
 时间复杂度是 O(m+n)  
@@ -723,6 +742,6 @@ if (tempMap.containsKey(n)) {
 
 发现两个字符不匹配，立即移动到 next数组下表的位置
 
-#### (2) 算法-前缀树（Trie树）
+##### (2) 算法-前缀树（Trie树）
 
 根节点不包含字符，将根节点到某一结点路径上经过的字符连接起来就是对应的字符串
