--- a/docs/4-算法.md
+++ b/docs/4-算法.md
@@ -162,7 +162,8 @@ class MyHashMap {
 2. 搜索插入位置(二分查找法) ====> 已排好序的  
 &emsp;&emsp;给1个排序数组和个1目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。  
 &emsp;&emsp;⭐️必须使用时间复杂度为 O(log n) 的算法。  
-![算法示例1](images/算法示例1.png)
+
+![算法示例1](../images/算法/算法示例1.png)
 
     ```Java
     1. 暴力解法：   不满足时间复杂度为O(log n)  此乃线性搜索
@@ -296,10 +297,10 @@ class MyHashMap {
         }
     ```
 
-    ![alt text](images/原地旋转.png)
+    ![alt text](../images/算法/原地旋转.png)
 
     分块内部反转再移动到相应位置：  
-    <img src="images/偶数.png" width="250"> ======== <img src="images/奇数.png" width="244">
+    <img src="../images/算法/偶数.png" width="250"> ======== <img src="../images/算法/奇数.png" width="244">
 
 5. 零矩阵  
     编写一种算法，若M × N矩阵中某个元素为0，则将其所在的行与列清零。
@@ -325,7 +326,7 @@ class MyHashMap {
     ```
 
 6. 对角线遍历  
-<img src="images/对角线遍历.png" width="300">  
+<img src="../images/算法/对角线遍历.png" width="300">  
 
 ⭐m行就有m条, n列n条因为第1行算过了，就-1
 
@@ -900,7 +901,7 @@ class MyHashMap {
         }
     ```
 
-    <img src="images/杨辉三角.png" width="500">
+    <img src="../images/算法/杨辉三角.png" width="500">
 
 13. 反转字符串的单词Ⅱ
     给定一个字符串 s ，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序
