--- a/docs/8-大数据.md
+++ b/docs/8-大数据.md
@@ -32,6 +32,6 @@
     直接仿照用户的多角度思考模式，预先为用户组建多维即多角度的数据模型。  
     `三种类型`： 关系OLAP（ROLAP）、多维OLAP（MOLAP）、混合OLAP（HOLAP）  
 
-    <img src="images/OLAP应用.png"  width="600">
-    <img src="images/Bigdata系统.png" width="600">
+    <img src="../images/大数据/OLAP应用.png"  width="600">
+    <img src="../images/大数据/Bigdata系统.png" width="600">
 
